Fixup details left alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -385,7 +385,7 @@ details[open].lollipop > summary:before {
   display: -webkit-flex;
   display: flex;
   align-items: center;
-  margin-right: 5px;
+  margin-right: 0.275em;
   margin-left: -0.625em;
 }
 
@@ -405,7 +405,7 @@ details.lollipop[open] > summary {
 .lollipop-detail {
   margin-left: 0.625em;
   border-left: solid 2px;
-  padding-left: 10px;
+  padding-left: 0.9em;
   margin-top: -10px;
   margin-bottom: 10px;
 }
